--- a/Assinatura v1.html
+++ b/Assinatura v1.html
@@ -18,7 +18,9 @@
             border-top: 1px solid white;
             border-bottom: 1px solid white;
             color: white;
-            line-height: 17px;">
+            line-height: 17px;
+            padding-right: 8px;
+            ">
             <strong style="white-space: nowrap;">Alvaro de Carvalho Junqueira</strong><br />
             <strong style="white-space: nowrap;">Analista de Sistemas</strong>
             <br />
